<resources>
    <string name="app_name">BEcoFriend</string>
    <string name="emailHint">E-mail</string>
    <string name="passHint">Password</string>
    <string name="signInText">Sign In</string>
    <string name="orText">OR</string>
    <string name="logOut">Logout</string>
    <string name="newUserText">New User? Sign Up</string>
    <string name="newUserNameText">Enter New Username</string>
    <string name="signUpText">SignUp</string>
    <string name="fullNameProfile">Enter your full name</string>
    <string name="uploadImageProfile">Upload Image</string>
    <string name="profileSet">Set Profile</string>
    <string name="problem">Problems</string>
    <string name="takeImage">Capture Image</string>
    <string name="takeVideo">Record Video</string>
    <string name="infoAboutIssue">Share problem</string>
    <string name="selectLocation">Select Issue Location</string>
    <string name="postBtnText">POST</string>
    <string name="address">Address</string>
    <string name="selectCity">Select City</string>
    <string name="ratingLabel">Total Rating</string>
    <string name="fullNameDetail">Full Name</string>
    <string name="enterEmail">Enter email address</string>
    <string name="enterPassword">Password</string>
    <string name="enterNewUserName">New user name</string>
    <string name="enterNewPassword">New Password</string>
    <string name="signUpDescription">Signing Up</string>
    <string name="signInDescription">Signing In</string>
    <string name="newAccountDescription">Create new account</string>
    <string name="enterFullName">Enter your full name</string>
    <string name="uploadDescription">Uplaod your profile image</string>
    <string name="cityDescription">Select your city</string>
    <string name="logOutDescription">Logout Button</string>
    <string name="localPostText">Local posts</string>
    <string name="allPostText">All posts</string>
    <string name="quote">Sooner or later, we will have to recognise that the Earth has rights, too, to live without pollution. What mankind must know is that human beings cannot live without Mother Earth, but the planet can live without humans.</string>

    <string-array name="cities">
        <item>Select City</item>
        <item>Lucknow</item>
        <item>Kanpur</item>
        <item>Delhi</item>
        <item>Bombay</item>
        <item>Ahamdabad</item>
        <item>Other</item>
    </string-array>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="mapIconDescription">Map of current post</string>
    <string name="imageViewPostDescription">Image of the issue</string>
    <string name="credentialsInputHandle">Please enter the credentials to login!</string>
    <string name="problemInputHandle">Please write your problem!</string>
    <string name="locationInputHandle">Please select the location!</string>
    <string name="emailDescription">Send email</string>
    <string name="cameraPermissionMessage">You can\'t post the images!!. It requires permission</string>
    <string name="videoLinkProblemText">Problem in video link</string>
    <string name="welcomeText">Welcome</string>
    <string name="authenticationFailedMessage">Authentication failed</string>
    <string name="successfullMessage">Login Successfully</string>
    <string name="selectCityProperly">Make sure you have selected your city by searching from search box</string>
    <string name="thanksText">Thanks for rating:</string>
    <string name="outof5"> /5</string>
    <string name="noPostsText">No any posts are available</string>
    <string name="noData">No data in database</string>
    <string name="ratingText">Rating:</string>
    <string name="outOf5Text">out of 5</string>
    <string name="widgetNotice">Create account and set profile to use the widget</string>
    <string name="reportedByLabel">Reported by:</string>
    <string name="colon">:</string>
    <string name="totalChild">No of issue in your area:</string>
    <string name="linkText">firebase</string>
    <string name="pleaseWait">Please wait...</string>
    <string name="retrivingDataText">Retrieving Details...</string>
    <string name="mailToText">mailto</string>
    <string name="senderemail">type_here@gmail.com</string>
    <string name="seriousIssueText">Serious issue noticed by Environer.Inc</string>
    <string name="contentLink">Content link:</string>
    <string name="emailChooser">Send email...</string>
    <string name="geo">geo:</string>
    <string name="comma">,</string>
    <string name="openBracket">(</string>
    <string name="closeBracket">)</string>
    <string name="query">\?q=</string>
    <string name="encodedQuery"><![CDATA[&z=16]]></string>
    <string name="preparingForAuth">Preparing for authentication...</string>
    <string name="uploadingDetailsText">Uploading your details...</string>
    <string name="retrivingLocalData">Retrieving your locality information...</string>
</resources>
