<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/llPadding">

    <EditText
        android:id="@+id/editTextInfo"
        android:layout_width="299dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/infoAboutIssue"
        android:inputType="textMultiLine"
        android:padding="@dimen/editTextPaddings"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textViewLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selectLocation"
        android:textAllCaps="true"
        android:textSize="@dimen/locationPickUpSize" />

    <Button
        android:id="@+id/button_post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/postBtnTopMargin"
        android:text="@string/postBtnText" />

</LinearLayout>