<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/llPadding">

    <EditText
        android:contentDescription="@string/enterNewUserName"
        android:hint="@string/enterNewUserName"
        android:id="@+id/editTextUserNameReg"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:alpha="0.8"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:inputType="textPersonName"
        android:padding="@dimen/editTextPaddings"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/colorAccent" />

    <EditText
        android:contentDescription="@string/enterNewPassword"
        android:hint="@string/enterNewPassword"
        android:id="@+id/editTextPassReg"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/passboxTopMargin"
        android:alpha="0.8"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:inputType="textPassword"
        android:padding="@dimen/editTextPaddings"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/colorAccent" />

    <Button
        android:id="@+id/button_signUp"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/passboxTopMargin"
        android:background="@drawable/rounded_edittext"
        android:text="@string/signUpText"
        android:textColor="@android:color/white" />


</LinearLayout>