<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/llPadding">

    <TextView
        android:id="@+id/textViewTakeImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_photo_camera_black_24px"
        android:drawableStart="@drawable/ic_photo_camera_black_24px"
        android:drawablePadding="@dimen/paddingwithIcon"
        android:text="@string/takeImage"
        android:textSize="@dimen/MenuItemsSize" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/black"/>

    <TextView
        android:id="@+id/textViewTakeVideo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_videocam_black_24px"
        android:drawableStart="@drawable/ic_videocam_black_24px"

        android:drawablePadding="@dimen/paddingwithIcon"
        android:text="@string/takeVideo"
        android:textSize="@dimen/MenuItemsSize" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/black"/>

    <TextView
        android:id="@+id/textViewProfileMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_account_circle_black_24px"
        android:drawableStart="@drawable/ic_account_circle_black_24px"
        android:drawablePadding="@dimen/paddingwithIcon"
        android:text="@string/profileSet"
        android:textSize="@dimen/MenuItemsSize" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/black"/>
</LinearLayout>